Preprocess reaching conditions (#254)
* Preprocess reaching conditions

* Remove node profiling for performance reasons

* Run tests on other optimization settings as well

* Fix `IsEquivalent`

* Directly handle `switch` instructions (#255)

* Directly handle `switch` instructions

* Handle `switch` in loops

* Add `sema` checks for switches

* Fix edge condition

* Run passing tests

* Add reminder for future self

* Address review

* Re-enable passing tests

* WIP: fix OOM

* Add timeout to tests

* Fix bug

* Use postdominator info to simplify reaching conds

* Try increasing timeout

* Add timeouts for all tests

* Simplify reaching conditions before conversion

* Fix Phi node handling

* Remove unused header

* Workaround
https://github.com/actions/checkout/issues/760

* WIP: add epilogue to exits too

* WIP: second attempt

* Upload test artifacts for macos builds

* Use `printf` instead of `puts`

* Force using `printf` in tests

* Package all test artifacts

* Restore old iterator pattern

* Force order of phi assignments

* Update timeout

* Upload test asm

* Try initializing vars

* Phi nodes: back to basics

* Remove test artifacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,6 +135,9 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
+      - name: Adding github workspace as safe directory
+        # See issue https://github.com/actions/checkout/issues/760
+        run: git config --global --add safe.directory $GITHUB_WORKSPACE
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
@@ -172,6 +175,9 @@ jobs:
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
 
     steps:
+      - name: Adding github workspace as safe directory
+        # See issue https://github.com/actions/checkout/issues/760
+        run: git config --global --add safe.directory $GITHUB_WORKSPACE
       - name: Clone the rellic repository
         uses: actions/checkout@v2
         with:
