Fix Z3 dependency usage
CMake fix and include z3 header where z3 is used

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -144,6 +144,7 @@ target_link_libraries("${PROJECT_NAME}"
   PUBLIC
     "${PROJECT_NAME}_cxx_settings"
     glog::glog
+    z3::libz3
     llvm
     clangIndex
     clangCodeGen
