--- a/.github/workflows/diff_tests.yml
+++ b/.github/workflows/diff_tests.yml
@@ -30,12 +30,11 @@ jobs:
       - name: Adding github workspace as safe directory
         # See issue https://github.com/actions/checkout/issues/760
         run: git config --global --add safe.directory $GITHUB_WORKSPACE
-      - name: Fetch base branch
+      - name: Checkout base branch
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.base_ref }}
+          ref: ${{ github.event.pull_request.base.ref }}
           submodules: true
-          fetch-depth: 0
       - name: Install utility tools
         shell: bash
         run: |
@@ -66,8 +65,10 @@ jobs:
           cp rellic-build/tools/rellic-decomp rellic-build/tools/rellic-decomp-old
 
       - name: Checkout merge branch
-        shell: bash
-        run: git checkout --progress --force ${{ github.ref }}
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+          submodules: true
 
       - name: Build new rellic
         shell: bash
