--- a/.github/workflows/diff_tests.yml
+++ b/.github/workflows/diff_tests.yml
@@ -66,7 +66,9 @@ jobs:
 
       - name: Checkout merge branch
         shell: bash
-        run: git checkout ${{ github.event.pull_request.head.sha }}
+        run: |
+          git fetch
+          git checkout ${{ github.event.pull_request.head.sha }}
 
       - name: Build new rellic
         shell: bash
