--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -16,7 +16,7 @@ target_link_libraries(${RELLIC_UNITTEST} PRIVATE
     "${PROJECT_NAME}_cxx_settings"
     "${PROJECT_NAME}"
     z3::libz3
-    thirdparty_doctest
+    doctest::doctest
 )
 
 target_compile_options(${RELLIC_UNITTEST} PRIVATE -fexceptions)
