Z3 all the things (#282)
* WIP: Z3 all the things

* Fix bugs

* Fix bug

* Combine whiles

* Improve simplification

* Better condition generation. Still slow.

* Revert to simple substitution

* Refactor ZCS

* Refactor NCP

* Fix NCP bugs

* Fix condition sharing bug

* Fix CBR

* Temporarily disable RBR

* Improve `else-if` recognition

* Improve switch conditions generation

* Factor out `Sort`

* Sort during simplification, use faster simplify

* Improve NCP

* Remove RBR

* Fix bug

* Try improve performance

* Reintroduce RBR

* Fix NCP

* Remove `IsConstant`

Too slow

* Reactivate RBR

* Remove ignored tests

* Fix CBR & RBR

* Factor out RBR lambda

* CBR & RBR review

* Cleanup

* Remove `nc` from tools

* Maybe this time `HeavySimplify` will work?

* Rename "Provenance" to "DecompilationContext"

* Remove temporary variables for `load`s

* Rename `POISON_IDX`

* Put all aliases inside `DecompilationContext`

* Rename `Sort` to `OrderById`

* Revert useless change

* Simplify exit

* Short-circuit slow condition

* Add explanation

* Add comments for `KnownExprs`

* Map expression directly by id

* Add small comment

* Factor out CBR

* Rename parameter for clarity

* Factor out `ToExpr`

* Early returns

* More cleanup

* More cleanup

* Factor out stuff in NCP

* Create wrapper method for Z3 expressions

* Add comments for maps

* Cleanup and comment `ConvertExpr`

* More comments

* Remove old comment

* More comments

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -32,9 +32,9 @@ set(AST_HEADERS
   "${include_dir}/AST/InferenceRule.h"
   "${include_dir}/AST/LocalDeclRenamer.h"
   "${include_dir}/AST/LoopRefine.h"
+  "${include_dir}/AST/MaterializeConds.h"
   "${include_dir}/AST/NestedCondProp.h"
   "${include_dir}/AST/NestedScopeCombine.h"
-  "${include_dir}/AST/NormalizeCond.h"
   "${include_dir}/AST/ReachBasedRefine.h"
   "${include_dir}/AST/StructFieldRenamer.h"
   "${include_dir}/AST/StructGenerator.h"
@@ -42,7 +42,6 @@ set(AST_HEADERS
   "${include_dir}/AST/TransformVisitor.h"
   "${include_dir}/AST/Util.h"
   "${include_dir}/AST/Z3CondSimplify.h"
-  "${include_dir}/AST/Z3ConvVisitor.h"
 )
 
 set(BC_HEADERS
@@ -72,12 +71,11 @@ set(AST_SOURCES
   AST/IRToASTVisitor.cpp
   AST/LocalDeclRenamer.cpp
   AST/LoopRefine.cpp
+  AST/MaterializeConds.cpp
   AST/NestedCondProp.cpp
   AST/NestedScopeCombine.cpp
-  AST/NormalizeCond.cpp
   AST/Util.cpp
   AST/Z3CondSimplify.cpp
-  AST/Z3ConvVisitor.cpp
   AST/ReachBasedRefine.cpp
   AST/StructFieldRenamer.cpp
   AST/StructGenerator.cpp
