--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
           echo "deb http://apt.llvm.org/focal/ llvm-toolchain-focal-14 main" >> /etc/apt/sources.list
           echo "deb-src http://apt.llvm.org/focal/ llvm-toolchain-focal-14 main" >> /etc/apt/sources.list
           apt-get update
-          apt-get install -y pixz xz-utils make rpm python3.8
+          apt-get install -y ninja-build pixz xz-utils make rpm python3.8
           update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 100
 
       - name: Build with build script
