--- a/.github/workflows/diff_tests.yml
+++ b/.github/workflows/diff_tests.yml
@@ -83,7 +83,7 @@ jobs:
           echo "deb http://apt.llvm.org/${{ matrix.image.codename }}/ llvm-toolchain-${{ matrix.image.codename }}-${{ matrix.llvm }} main" >> /etc/apt/sources.list
           echo "deb-src http://apt.llvm.org/${{ matrix.image.codename }}/ llvm-toolchain-${{ matrix.image.codename }}-${{ matrix.llvm }} main" >> /etc/apt/sources.list
           apt-get update
-          apt-get install -y pixz xz-utils make rpm python3.8 clang-${{ matrix.llvm }}
+          apt-get install -y ninja-build pixz xz-utils make rpm python3.8 clang-${{ matrix.llvm }}
           update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 100
       - name: Download cxx-commons
         shell: bash
@@ -95,13 +95,13 @@ jobs:
       - name: Build old rellic
         shell: bash
         run: |
-          cmake -S old -B rellic-build-old -DVCPKG_ROOT=$GITHUB_WORKSPACE/vcpkg_${{ matrix.image.name }}-${{ matrix.image.tag }}_llvm-${{ matrix.llvm }}_amd64
+          cmake -G Ninja -S old -B rellic-build-old -DVCPKG_ROOT=$GITHUB_WORKSPACE/vcpkg_${{ matrix.image.name }}-${{ matrix.image.tag }}_llvm-${{ matrix.llvm }}_amd64
           cmake --build rellic-build-old
 
       - name: Build new rellic
         shell: bash
         run: |
-          cmake -S . -B rellic-build -DVCPKG_ROOT=$GITHUB_WORKSPACE/vcpkg_${{ matrix.image.name }}-${{ matrix.image.tag }}_llvm-${{ matrix.llvm }}_amd64
+          cmake -G Ninja -S . -B rellic-build -DVCPKG_ROOT=$GITHUB_WORKSPACE/vcpkg_${{ matrix.image.name }}-${{ matrix.image.tag }}_llvm-${{ matrix.llvm }}_amd64
           cmake --build rellic-build
 
       - name: Print job summary
