--- a/.github/workflows/anghabench-cron-jobs.yml
+++ b/.github/workflows/anghabench-cron-jobs.yml
@@ -73,7 +73,7 @@ jobs:
         git config --global url."https://${ACCESS_TOKEN}@github.com/".insteadOf "git@github.com:"
     - name: Set up pre-requisies
       run: |
-        sudo dpkg --add-architecture i386 && sudo apt-get update && sudo env DEBIAN_FRONTEND=noninteractive apt-get -qqy upgrade
+        sudo dpkg --add-architecture i386 && sudo apt-get -qqy update && sudo env DEBIAN_FRONTEND=noninteractive apt-get -qqy upgrade
         sudo env DEBIAN_FRONTEND=noninteractive apt-get install -qqy \
           git curl wget unzip xz-utils pixz jq s3cmd ninja-build pkg-config \
           liblzma-dev zlib1g-dev libtinfo-dev build-essential \
