Add type provider

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -40,6 +40,7 @@ set(AST_HEADERS
   "${include_dir}/AST/StructGenerator.h"
   "${include_dir}/AST/SubprogramGenerator.h"
   "${include_dir}/AST/TransformVisitor.h"
+  "${include_dir}/AST/TypeProvider.h"
   "${include_dir}/AST/Util.h"
   "${include_dir}/AST/Z3CondSimplify.h"
 )
@@ -80,12 +81,12 @@ set(AST_SOURCES
   AST/StructFieldRenamer.cpp
   AST/StructGenerator.cpp
   AST/SubprogramGenerator.cpp
+  AST/TypeProvider.cpp
 )
 
 set(BC_SOURCES
   BC/Util.cpp
 )
-
 
 add_library("${PROJECT_NAME}" STATIC
   ${public_HEADERS}
@@ -94,64 +95,62 @@ add_library("${PROJECT_NAME}" STATIC
 
   Decompiler.cpp
   Exception.cpp
-  
-  "${POST_CONFIGURE_FILE}"  # Version.cpp
-)
 
+  "${POST_CONFIGURE_FILE}" # Version.cpp
+)
 
 set_target_properties(
   "${PROJECT_NAME}" PROPERTIES
-    VISIBILITY_INLINES_HIDDEN YES
-    CXX_VISIBILITY_PRESET hidden
+  VISIBILITY_INLINES_HIDDEN YES
+  CXX_VISIBILITY_PRESET hidden
 )
 
-#link version information
+# link version information
 target_link_libraries("${PROJECT_NAME}"
   PUBLIC
-    "${PROJECT_NAME}_cxx_settings"
-    glog::glog
-    z3::libz3
-    "${llvm_libs}"
-    clangIndex
-    clangCodeGen
-    clangASTMatchers
-    clangTooling
+  "${PROJECT_NAME}_cxx_settings"
+  glog::glog
+  z3::libz3
+  "${llvm_libs}"
+  clangIndex
+  clangCodeGen
+  clangASTMatchers
+  clangTooling
 )
 
 set_target_properties("${PROJECT_NAME}"
   PROPERTIES
-    LINKER_LANGUAGE
-      CXX
+  LINKER_LANGUAGE
+  CXX
 )
 
 target_include_directories("${PROJECT_NAME}"
   PUBLIC
-    $<BUILD_INTERFACE:${RELLIC_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+  $<BUILD_INTERFACE:${RELLIC_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
 )
 
 if(RELLIC_ENABLE_INSTALL)
   include(GNUInstallDirs)
   install(
     DIRECTORY
-      "${include_dir}"
+    "${include_dir}"
     DESTINATION
-      ${CMAKE_INSTALL_INCLUDEDIR})
-  
-  
+    ${CMAKE_INSTALL_INCLUDEDIR})
+
   install(
     TARGETS
-      "${PROJECT_NAME}"
+    "${PROJECT_NAME}"
     EXPORT
-      "${PROJECT_NAME}Targets"
+    "${PROJECT_NAME}Targets"
     RUNTIME
-      DESTINATION
-        ${CMAKE_INSTALL_BINDIR}
+    DESTINATION
+    ${CMAKE_INSTALL_BINDIR}
     LIBRARY
-      DESTINATION
-        ${CMAKE_INSTALL_LIBDIR}
+    DESTINATION
+    ${CMAKE_INSTALL_LIBDIR}
     ARCHIVE
-      DESTINATION
-        ${CMAKE_INSTALL_LIBDIR}
+    DESTINATION
+    ${CMAKE_INSTALL_LIBDIR}
   )
 endif(RELLIC_ENABLE_INSTALL)
