--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -40,6 +40,7 @@ set(AST_HEADERS
   "${include_dir}/AST/StructGenerator.h"
   "${include_dir}/AST/SubprogramGenerator.h"
   "${include_dir}/AST/TransformVisitor.h"
+  "${include_dir}/AST/TypeProvider.h"
   "${include_dir}/AST/Util.h"
   "${include_dir}/AST/Z3CondSimplify.h"
 )
@@ -80,6 +81,7 @@ set(AST_SOURCES
   AST/StructFieldRenamer.cpp
   AST/StructGenerator.cpp
   AST/SubprogramGenerator.cpp
+  AST/TypeProvider.cpp
 )
 
 set(BC_SOURCES
