--- a/.github/workflows/anghabench-cron-jobs.yml
+++ b/.github/workflows/anghabench-cron-jobs.yml
@@ -6,39 +6,6 @@ on:
    - cron: "0 3 * * *"
 
 jobs:
-  start-runner:
-    if: github.event.workflow_run.conclusion == 'success' 
-    name: Start self-hosted EC2 runner
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        ec2:
-          - { ami: ami-0610b26d76319237e, instance-type: m6i.8xlarge}
-    outputs:
-      label: ${{ steps.start-ec2-runner.outputs.label }}
-      ec2-instance-id: ${{ steps.start-ec2-runner.outputs.ec2-instance-id }}
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-      - name: Start EC2 runner
-        id: start-ec2-runner
-        uses: machulav/ec2-github-runner@v2
-        with:
-          mode: start
-          github-token: ${{ secrets.ACCESS_TOKEN }}
-          ec2-image-id: ${{ matrix.ec2.ami }}
-          ec2-instance-type: ${{ matrix.ec2.instance-type }}
-          subnet-id: subnet-0deb935f0bbfe1a5d
-          security-group-id: sg-0f6a02eb80fafb982
-          aws-resource-tags: > # optional, requires additional permissions
-            [
-              {"Key": "Name", "Value": "ec2-github-runner"},
-              {"Key": "GitHubRepository", "Value": "${{ github.repository }}"}
-            ]
   do-the-job:
     strategy:
       fail-fast: false
@@ -47,8 +14,7 @@ jobs:
         run_size: [ '1k' ]
 
     name: Run AnghaBench CI (AMD64)
-    needs: start-runner # required to start the main job when the runner is ready
-    runs-on: ${{ needs.start-runner.outputs.label }} # run the job on the newly created runner
+    runs-on: gha-ubuntu-32
     steps:
     - uses: actions/checkout@v2
       with:
@@ -171,26 +137,3 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.DO_SPACES_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.DO_SPACES_SECRET }}
         SLACK_HOOK: ${{ secrets.SLACK_HOOK }}
-
-  stop-runner:
-    name: Stop self-hosted EC2 runner
-    needs:
-      - start-runner # required to get output from the start-runner job
-      - do-the-job # required to wait when the main job is done
-    runs-on: ubuntu-latest
-    if: ${{ always() }} # required to stop the runner even if the error happened in the previous jobs
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-      - name: Stop EC2 runner
-        uses: machulav/ec2-github-runner@v2
-        with:
-          mode: stop
-          github-token: ${{ secrets.ACCESS_TOKEN }}
-          label: ${{ needs.start-runner.outputs.label }}
-          ec2-instance-id: ${{ needs.start-runner.outputs.ec2-instance-id }}
-
